--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ header nav a{
     padding-left: 4.3rem;
 }
 
-.content {
+.content, .container{
     margin: 5rem 10vw;
 }
 
@@ -173,4 +173,24 @@ footer .copyright > h2 {
     margin: 0;
     font-size: 1rem;
     font-weight: 400;
+}
+
+
+
+
+form input, form textarea, form select {
+    width: 100%;
+    padding: 5px;
+    margin: 5px 0 20px;
+    resize: none;
+}
+
+form button {
+    padding: 15px 30px;
+    text-transform: uppercase;
+    background-color: var(--psYellow);
+    color: white;
+    border: 0;
+    font-weight: 700;
+
 }
