--- a/css/style.css
+++ b/css/style.css
@@ -235,11 +235,23 @@ footer .copyright > h2 {
 
 /* FORM UHUUUUUUUUUUUUUU */
 
-form input, form textarea, form select {
+form input:not([type="checkbox"]), form textarea, form select {
     width: 100%;
     padding: 5px;
     margin: 5px 0 20px;
     resize: none;
+}
+
+form input:not([type="checkbox"], [type="file"]):focus,
+form textarea:focus,
+form select:focus {
+    background-color: #fff5d5;
+}
+
+form input:not([type="checkbox"], [type="file"]):focus-visible,
+form textarea:focus-visible,
+form select:focus-visible {
+    outline-color: var(--psYellow);
 }
 
 form button {
@@ -248,7 +260,25 @@ form button {
     background-color: var(--psYellow);
     color: white;
     border: 0;
-    font-weight: 700
+    font-weight: 700;
+    transition: 0.5s;
+    
+}
+
+form button:hover {
+    background-color: #FFaa00;
+}
+
+form button:active {
+    background-color: #f5e1ba;
+}
+
+form .check {
+    margin: 5px 0;
+}
+
+form .check:last-of-type {
+    margin-bottom: 30px;
 }
 
 /* ---------------------- */
