--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ footer .copyright > h2 {
 .content .servicoList {
     display: flex;
     flex-direction: column;
-    margin: 6rem;
+    margin: 6rem 0;
 }
 
 .content .servicoList .line {
@@ -220,8 +220,9 @@ footer .copyright > h2 {
 .content .servicoList .servicoHor .listingContentHor {
     display: flex;
     flex-direction: column;
-    width: 50rem;
+    width: 45rem;
     max-width: 70%;
+    justify-content: flex-end;
 }
 
 .content .servicoList .servicoHor .listingContentHor ul {
@@ -229,6 +230,59 @@ footer .copyright > h2 {
     margin: 0;
     padding: 0;
 
+}
+.content .servicoList .servicoHor .listingContentHor ul li:first-of-type {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.content .servicoList .servicoHor .listingContentHor ul h2{
+    margin: 0;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 700;
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    padding-right: 1rem;
+}
+
+.content .servicoList .servicoHor .listingContentHor ul h3{
+    margin: 0;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 400;
+    font-size: 2rem;
+    text-transform: uppercase;
+    line-height: 54px;
+}
+
+.content .servicoList .servicoHor .listingContentHor ul p{
+    font-family: 'Nunito', sans-serif;
+    font-weight: 400;
+    font-size: 1.15rem;
+    color: var(--psGray);
+}
+
+.content .servicoList .servicoHor .listingContentHor button {
+    width: 15rem;
+    padding: 0.5rem 0;
+    justify-self: flex-end;
+}
+
+button {
+        padding: 1rem 2rem;
+        background-color: var(--psYellow);
+        color: white;
+        border: 0;
+        font-weight: 700;
+        transition: 0.2s;
+}
+
+button:hover {
+    background-color: #FFaa00;
+}
+
+button:active {
+    background-color: #ffda9a;
+    transition: 0.05s;
 }
 
 /* -------- */
