--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ html {
     font-family: 'Nunito', sans-serif;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 .sr-only{
     position: absolute;
     height: 1px;
@@ -34,12 +38,27 @@ a {
 
 header {
     background-color: var(--psYellow);
-    height: 7rem;
+    height: fit-content;
+    min-height: 7rem;
     box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.25);
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 0 7.5rem;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 0 min(7.5rem, 10vw);
+}
+
+header > div {
+    margin-right: auto;
+}
+
+header > nav {
+    margin-left: auto;
+}
+
+header nav {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 header nav a{
@@ -157,17 +176,18 @@ footer .footer {
     padding: 0 10vw;
 }
 
-footer .footer .footerContent {
+footer .footerContent {
     display: flex;
     align-items: center;
 }
 
-footer .footer .footerContent ul {
+.footerContent ul {
     list-style: none;
     text-transform: uppercase;
     font-weight: 400;
     font-size: 1rem;
     padding: 0;
+    height: fit-content;
 }
 
 footer .copyright {
@@ -192,6 +212,7 @@ footer .copyright > h2 {
     color: var(--psYellow);
     text-transform: uppercase;
     text-align: center;
+    font-size: 2.5rem;
 }
 
 .content .servicoList {
@@ -286,6 +307,49 @@ button:active {
 }
 
 /* -------- */
+
+/* CONTATO */
+
+.content.contato button {
+    width: 100%;
+    text-transform: lowercase;
+    padding: 0.5rem 0;
+}
+
+.content.contato form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.content.contato form input, .content.contato form textarea {
+    padding: 0.5rem 1rem;
+    width: 100%;
+    margin: 1rem 0;
+}
+
+.content.contato form textarea {
+    height: 12rem;
+}
+
+.content.contato h2 {
+    color: var(--psYellow);
+    text-transform: uppercase;
+    font-size: 2.5rem;
+}
+
+.content.contato div {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.content.contato div > *{
+    width: 42rem;
+    min-width: 32%;
+    max-width: 90vw;
+}
+
+/* ------- */
 
 /* FORM UHUUUUUUUUUUUUUU */
 
