--- a/css/style.css
+++ b/css/style.css
@@ -368,6 +368,56 @@ button:active {
 
 /* ------- */
 
+
+/* LOGIN / REGISTER */
+
+.content.register, .content.login {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.form-div {
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+    padding: 3.5rem;
+    width: 25.5rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-div h2 {
+    color: var(--psYellow);
+    text-transform: uppercase;
+    font-size: 2.5rem;
+    text-align: center;
+}
+
+.form-div form {
+    padding: 0 1.5rem;
+}
+
+.form-div form input{
+    margin: 0.4rem 0 !important;
+}
+
+.form-div form button {
+    width: 100%;
+    text-transform: lowercase;
+    margin-top: 0.5rem;
+    margin-bottom: 0.3rem;
+    padding: 0.5rem;
+}
+
+.form-div a {
+    font-size: 1rem;
+    text-align: center;
+    font-weight: 700;
+    color: black;
+}
+
+/* ---------------- */
+
+
 /* FORM UHUUUUUUUUUUUUUU */
 
 form input:not([type="checkbox"]), form textarea, form select {
