--- a/css/style.css
+++ b/css/style.css
@@ -36,11 +36,13 @@ body {
     top: 0;
     min-height: 100vh;
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 .content, .container {
     margin: 5rem 10vw 0 10vw;
-    padding-bottom: 20rem;
+    padding-bottom: 2rem;
 }
 
 
@@ -176,13 +178,14 @@ header nav a{
 }
 
 .content .lowerSection div {
-    width: 50%;
+    width: 38rem;
 }
 
 footer {
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
     bottom: 0;
+    margin-top: auto;
 }
 
 footer .footer {
